--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -16,7 +16,7 @@
           </svg>
         </a>
       </span>
-      <span class="footer-top__account" data-graph-animation="custom" data-graph-path="first">
+      <span class="footer-top__account" data-graph-animation="custom" data-graph-path="account">
         <svg class="footer-top__user-icon" aria-hidden="true">
           <use xlink:href="img/sprite.svg#user"></use>
         </svg>
