--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,7 @@
           <span class="contact-link__value">8(800) 999-9999</span>
         </a>
         <div class="account">
-          <span class="account__link" data-graph-animation="custom" data-graph-path="first">
+          <span class="account__link" data-graph-animation="custom" data-graph-path="account">
             <svg class="account__icon" aria-hidden="true">
               <use xlink:href="img/sprite.svg#user"></use>
             </svg>
@@ -88,7 +88,7 @@
           </a>
         </div>
         <div class="account">
-          <span class="account__link" data-graph-animation="custom" data-graph-path="first">
+          <span class="account__link" data-graph-animation="custom" data-graph-path="account">
             <svg class="account__icon" aria-hidden="true">
               <use xlink:href="img/sprite.svg#user"></use>
             </svg>
