--- a/src/partials/tour-search.html
+++ b/src/partials/tour-search.html
@@ -13,7 +13,7 @@
         </div>
           <div class="dropdown dropdown-content">
             <div class="departure-body">
-              <ul class="departure-drop">
+              <ul class="departure-drop list-reset">
                 <li class="departure-drop__item">Москва</li>
                 <li class="departure-drop__item">Санкт-петербург</li>
                 <li class="departure-drop__item">Анапа</li>
@@ -49,11 +49,11 @@
         </div>
           <div class="dropdown dropdown-content">
             <div class="where-body">
-              <ul class="where-drop">
+              <ul class="where-drop list-reset">
                 <li class="where-drop__item">Турция</li>
                 <li class="where-drop__item">Тайланд</li>
                 <li class="where-drop__item">Египет</li>
-                <li class="where-drop__item">Индия</li>
+                <li class="where-drop__item">ОАЭ</li>
               </ul>
             </div>
           </div>
