--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,7 @@
 @import "./components/basket";
 @import "./components/tour-search";
 @import "./components/card";
+@import "./components/hotel-tour.scss";
 
 
 // подключения компонентов страницы (мелкие компоненты)
