--- a/src/scss/components/_modals.scss
+++ b/src/scss/components/_modals.scss
@@ -1,6 +1,6 @@
 .site-modal {
-  border-radius: 4px;
-  width: 500px;
+  border-radius: 8px;
+  width: 600px;
 
   &__title {
     display: flex;
@@ -73,6 +73,18 @@
 
   @include mobile {
     width: 90%;
+  }
+}
+.gallery {
+  max-width: 1150px;
+  width: 80%;
+
+  @include tablet {
+    width: 90%;
+  }
+
+  @include mobile {
+    width: 95%;
   }
 }
 
