--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="footer-top">
       <span class="footer-top__link">
-        <a href="#">Агенствам
+        <a href="agencies.html">Агенствам
           <svg class="footer-top__link-icon" aria-hidden="true">
             <use xlink:href="img/sprite.svg#link"></use>
           </svg>
