--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,7 +33,10 @@
 @import "./components/basket";
 @import "./components/tour-search";
 @import "./components/card";
-@import "./components/hotel-tour.scss";
+@import "./components/hotel-tour";
+@import "./components/rooms";
+@import "./components/rooms-preview";
+@import "./components/positioning";
 
 
 // подключения компонентов страницы (мелкие компоненты)
