--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -1,7 +1,7 @@
 <section class="basket">
   <div class="container">
     <div class="booking">
-      <h2 class="">Добавьте что-нибудь в корзину</h2>
+      <img src="../img/develop.jpg" alt="develop">
     </div>
   </div>
 </section>
