--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,7 +7,7 @@
       Купить тур легче, чем вы думаете
     </h3>
     <section id="filters" class="container">
-      <form action="http:tour-search.html" class="search-form search-form--mod">
+      <form class="search-form search-form--mod">
         <!----------- From -------------->
         <div class="search-form__item">
           <div class="search-form__inner">
@@ -179,7 +179,7 @@
               </div>
             </div>
         </div>
-        <button id="search-btn" class="search-button">Найти</button>
+        <a href="tour-search.html" id="search-btn" class="search-button">Найти</a>
       </form>
     </section>
   </div>
