--- a/src/partials/tour-search.html
+++ b/src/partials/tour-search.html
@@ -172,7 +172,7 @@
             </div>
           </div>
       </div>
-      <button id="search-btn" class="search-button">Найти</button>
+      <a href="tour-search.html" id="search-btn" class="search-button">Найти</a>
     </form>
   </section>
   <section class="filter-content">
