--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -1,7 +1,7 @@
 <section class="basket">
   <div class="container">
     <div class="booking">
-      <img src="../img/develop.jpg" alt="develop">
+      <img src="./img/develop.jpg" alt="develop">
     </div>
   </div>
 </section>
