--- a/src/partials/best-fares.html
+++ b/src/partials/best-fares.html
@@ -4,12 +4,12 @@
       <h2 class="title best-fares__title">Лучшие предложения</h2>
       <div class="slider-nav">
         <button class="btn-reset slider-nav__btn best-fares__prev slider-btn" aria-label="Перейти к предыдущему слайду">
-          <svg class="">
+          <svg>
             <use xlink:href="img/sprite.svg#left-arrow"></use>
           </svg>
         </button>
         <button class="btn-reset slider-nav__btn best-fares__next slider-btn" aria-label="Перейти к следующему слайду">
-          <svg class="">
+          <svg>
             <use xlink:href="img/sprite.svg#right-arrow"></use>
           </svg>
         </button>
@@ -21,7 +21,7 @@
           <div class="best-fares__slide">
             <a href="#" class="best-fares-item">
               <div class="best-fares-item__image scale">
-                <img src="../img/zvenigorod.jpg" alt="img" />
+                <img src="./img/zvenigorod.jpg" alt="img" />
               </div>
               <div class="best-fares-item__content">
                 <div class="best-fares-item__rating">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="best-fares-item__bottom">
                   <div class="best-fares-item__price">
-                    от <span>3&nbsp;900&nbsp;₽</span>
+                    от <span>3 900 ₽</span>
                   </div>
 
                   <div class="best-fares-item__price-descr">
@@ -64,7 +64,7 @@
           <div class="best-fares__slide">
             <a href="#" class="best-fares-item">
               <div class="best-fares-item__image scale">
-                <img src="../img/Psou.jpg"" alt=" img">
+                <img src="./img/Psou.jpg"" alt=" img">
               </div>
               <div class="best-fares-item__content">
                 <div class="best-fares-item__rating">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="best-fares-item__bottom">
                   <div class="best-fares-item__price">
-                    от <span>3&nbsp;900&nbsp;₽</span>
+                    от <span>3 900 ₽</span>
                   </div>
 
                   <div class="best-fares-item__price-descr">
@@ -105,7 +105,7 @@
           <div class="best-fares__slide">
             <a href="#" class="best-fares-item">
               <div class="best-fares-item__image scale">
-                <img src="../img/dominica.jpg" alt="img" />
+                <img src="./img/dominica.jpg" alt="img" />
               </div>
               <div class="best-fares-item__content">
                 <div class="best-fares-item__rating">
@@ -126,7 +126,7 @@
                 </div>
                 <div class="best-fares-item__bottom">
                   <div class="best-fares-item__price">
-                    от <span>700&nbsp;₽</span>
+                    от <span>700 ₽</span>
                   </div>
 
                   <div class="best-fares-item__price-descr">
@@ -142,7 +142,7 @@
           <div class="best-fares__slide">
             <a href="#" class="best-fares-item">
               <div class="best-fares-item__image scale">
-                <img src="../img/aitar.jpg" alt="img" />
+                <img src="./img/aitar.jpg" alt="img" />
               </div>
               <div class="best-fares-item__content">
                 <div class="best-fares-item__rating">
@@ -161,7 +161,7 @@
                 </div>
                 <div class="best-fares-item__bottom">
                   <div class="best-fares-item__price">
-                    от <span>600&nbsp;₽</span>
+                    от <span>600 ₽</span>
                   </div>
 
                   <div class="best-fares-item__price-descr">
@@ -177,7 +177,7 @@
           <div class="best-fares__slide">
             <a href="#" class="best-fares-item">
               <div class="best-fares-item__image scale">
-                <img src="../img/Promitei.jpg" alt="img" />
+                <img src="./img/Promitei.jpg" alt="img" />
               </div>
               <div class="best-fares-item__content">
                 <div class="best-fares-item__rating">
@@ -198,7 +198,7 @@
                 </div>
                 <div class="best-fares-item__bottom">
                   <div class="best-fares-item__price">
-                    от <span>700&nbsp;₽</span>
+                    от <span>700 ₽</span>
                   </div>
 
                   <div class="best-fares-item__price-descr">
@@ -214,7 +214,7 @@
           <div class="best-fares__slide">
             <a href="#" class="best-fares-item">
               <div class="best-fares-item__image scale">
-                <img src="../img/Odissea.jpg" alt="img" />
+                <img src="./img/Odissea.jpg" alt="img" />
               </div>
               <div class="best-fares-item__content">
                 <div class="best-fares-item__rating">
@@ -236,7 +236,7 @@
                 </div>
                 <div class="best-fares-item__bottom">
                   <div class="best-fares-item__price">
-                    от <span>2&nbsp;200&nbsp;₽</span>
+                    от <span>2 200 ₽</span>
                   </div>
 
                   <div class="best-fares-item__price-descr">
@@ -252,7 +252,7 @@
           <div class="best-fares__slide">
             <a href="#" class="best-fares-item">
               <div class="best-fares-item__image scale">
-                <img src="../img/litfound.jpg" alt="img" />
+                <img src="./img/litfound.jpg" alt="img" />
               </div>
               <div class="best-fares-item__content">
                 <div class="best-fares-item__rating">
@@ -277,7 +277,7 @@
                 </div>
                 <div class="best-fares-item__bottom">
                   <div class="best-fares-item__price">
-                    от <span>2&nbsp;800&nbsp;₽</span>
+                    от <span>2 800 ₽</span>
                   </div>
 
                   <div class="best-fares-item__price-descr">
@@ -293,7 +293,7 @@
           <div class="best-fares__slide">
             <a href="#" class="best-fares-item">
               <div class="best-fares-item__image scale">
-                <img src="../img/picunda.jpg" alt="img" />
+                <img src="./img/picunda.jpg" alt="img" />
               </div>
               <div class="best-fares-item__content">
                 <div class="best-fares-item__rating">
@@ -317,7 +317,7 @@
                 </div>
                 <div class="best-fares-item__bottom">
                   <div class="best-fares-item__price">
-                    от <span>1&nbsp;600&nbsp;₽</span>
+                    от <span>1 600 ₽</span>
                   </div>
 
                   <div class="best-fares-item__price-descr">
