--- a/src/partials/slider-main.html
+++ b/src/partials/slider-main.html
@@ -10,7 +10,7 @@
                   Настоящий арабский колорит
                 </p>
                 <div class="slide__btns">
-                  <button class="btn btn--fill">Подобрать тур</button>
+                  <button class="btn btn--fill" data-graph-animation="custom" data-graph-path="second">Подобрать тур</button>
                 </div>
               </div>
         </div>
@@ -22,7 +22,7 @@
                   Познакомтесь с самым колоритным городом Турции
                 </p>
                 <div class="slide__btns">
-                  <button class="btn btn--fill">Подобрать тур</button>
+                  <button class="btn btn--fill" data-graph-animation="custom" data-graph-path="second">Подобрать тур</button>
                 </div>
               </div>
         </div>
@@ -34,7 +34,7 @@
                 для отдыха в России
               </p>
               <div class="slide__btns">
-                <button class="btn btn--fill">Подобрать тур</button>
+                <button class="btn btn--fill" data-graph-animation="custom" data-graph-path="second">Подобрать тур</button>
               </div>
             </div>
       </div>
