--- a/src/scss/components/_rooms-preview.scss
+++ b/src/scss/components/_rooms-preview.scss
@@ -40,6 +40,10 @@
   left: 12px;
 }
 
+.room-slider {
+  border-radius: 10px;
+}
+
 .room-slider .swiper-slide img {
   display: block;
   border-radius: 8px;
