--- a/src/partials/popular-categories.html
+++ b/src/partials/popular-categories.html
@@ -3,7 +3,7 @@
     <h2 class="title">Популярные категории</h2>
     <ul class="list-reset popular-list popular-categories__list grid">
       <li class="popular-list__item">
-        <a href="#" class="popular-item popular-item--tours">
+        <a href="tour-search.html" class="popular-item popular-item--tours">
             <svg class="popular-item__icon" aria-hidden="true">
               <use xlink:href="img/sprite.svg#popular-1"></use>
             </svg>
