--- a/src/scss/components/_slider-main.scss
+++ b/src/scss/components/_slider-main.scss
@@ -15,6 +15,7 @@
 .swiper-container {
   overflow: hidden;
   height: inherit;
+  border-radius: 10px;
 }
 
 .swiper-slide {
@@ -23,7 +24,7 @@
 
 .swiper-button-prev {
   left: 14px;
-  top: 4.7%;
+  top: 4.3%;
   display: none;
   border: none;
   padding: 0;
@@ -44,7 +45,7 @@
 
 .swiper-button-next {
   right: 14px;
-  top: 4.7%;
+  top: 4.3%;
   display: none;
   border: none;
   padding: 0;
@@ -77,9 +78,10 @@
 }
 
 .slide {
-  @include bg-cover;
-
+  border-radius: 10px;
   background-color: var(--color-gray);
+
+  @include bg-cover;
 
   &__content {
       padding: 110px 15px 0 80px;
