--- a/src/partials/best-fares.html
+++ b/src/partials/best-fares.html
@@ -1,4 +1,4 @@
-<section class="best-fares section-offset">
+<section id="best-fares" class="best-fares section-offset">
   <div class="container">
     <div class="best-fares__top">
       <h2 class="title best-fares__title">Лучшие предложения</h2>
