--- a/src/partials/hotel-tour.html
+++ b/src/partials/hotel-tour.html
@@ -103,6 +103,6 @@
         </div>
     </div>
 
-    <div id="rooms-preview"></div>
+    <div id="rooms-preview" class="rooms-container"></div>
   </div>
 </section>
