--- a/src/partials/popular-categories.html
+++ b/src/partials/popular-categories.html
@@ -11,7 +11,7 @@
         <h3 class="popular-item__title">Туры</h3>
       </li>
       <li class="popular-list__item">
-        <a href="#" class="popular-item popular-item--burn">
+        <a href="#best-fares" class="popular-item popular-item--burn">
             <svg class="popular-item__icon" aria-hidden="true">
               <use xlink:href="img/sprite.svg#popular-2"></use>
             </svg>
@@ -27,7 +27,7 @@
         <h3 class="popular-item__title">Впечатления</h3>
       </li>
       <li class="popular-list__item">
-        <a href="#" class="popular-item popular-item--hotels">
+        <a href="tour-search.html" class="popular-item popular-item--hotels">
             <svg class="popular-item__icon" aria-hidden="true">
               <use xlink:href="img/sprite.svg#popular-4"></use>
             </svg>
