--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,3 +49,5 @@
 @import "./components/catalog";
 @import "./components/breadcrumbs";
 @import "./components/custom-checkbox";
+@import "./components/hotel-card";
+@import "./components/toggle-switch";
