--- a/app/css/main.css
+++ b/app/css/main.css
@@ -12,6 +12,7 @@
   --color-sand: #f5f5f5;
   --color-primary: #ffe733;
   --color-active: #f3db25;
+  --color-atlantis: #5ac82c;
   --color-blueberry: #518bc4;
   --color-sapphire: #0069b5;
   --color-blue: #4e3e8e;
@@ -423,6 +424,30 @@ input[type=range]::-moz-range-thumb {
 }
 .btn--fill:active {
   background-color: var(--color-primary);
+}
+.btn--payment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 100%;
+}
+.btn--rooms {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 12px 20px;
 }
 @media (max-width: 576px) {
   .btn {
@@ -3490,7 +3515,149 @@ input[type=range]::-moz-range-thumb {
 }
 
 .booking {
-  padding: 30px 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  gap: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px 0;
+  max-width: 832px;
+}
+
+.buyer-data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  padding: 15px 0;
+}
+@media (max-width: 576px) {
+  .buyer-data {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 28px;
+  }
+}
+
+.buyer {
+  gap: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.buyer__container {
+  padding: 20px 20px 15px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
+}
+.buyer__title {
+  margin: 0;
+  margin-bottom: 14px;
+}
+.buyer__title--mb {
+  margin: 0;
+  margin-bottom: 5px;
+}
+.buyer__check {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-column-gap: 8px;
+  -moz-column-gap: 8px;
+  column-gap: 8px;
+  padding-bottom: 12px;
+}
+.buyer__descr {
+  display: block;
+  margin-bottom: 10px;
+}
+.buyer__info {
+  font-size: 14px;
+  color: var(--color-great);
+}
+
+.payment {
+  border-radius: 8px;
+  -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
+}
+.payment__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 20px;
+}
+@media (max-width: 576px) {
+  .payment__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+.payment__descr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 50%;
+}
+@media (max-width: 576px) {
+  .payment__descr {
+    width: 100%;
+  }
+}
+.payment__title {
+  margin: 0;
+  margin-bottom: 15px;
+}
+.payment__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: end;
+  font-size: 24px;
+  font-weight: 500;
+}
+.payment__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: end;
+  width: 35%;
+}
+@media (max-width: 576px) {
+  .payment__btn {
+    width: 100%;
+  }
 }
 
 .tour-search {
@@ -3774,10 +3941,32 @@ input[type=range]::-moz-range-thumb {
 }
 
 .hotel-descr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-bottom: 40px;
   padding: 15px;
   border-radius: 8px;
   background-color: var(--color-aliceblue);
+}
+@media (max-width: 576px) {
+  .hotel-descr__data {
+    margin-bottom: 20px;
+  }
+}
+.hotel-descr__title {
+  padding-right: 10px;
+}
+@media (max-width: 576px) {
+  .hotel-descr {
+    display: block;
+  }
 }
 
 .hotel-preview {
@@ -3944,20 +4133,28 @@ input[type=range]::-moz-range-thumb {
 .swiper-pagination-fraction {
   top: -27px;
   bottom: auto;
+  z-index: -1;
   color: var(--color-light);
+}
+
+.rooms-container {
+  padding: 50px 0 20px;
 }
 
 .room {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
   border-radius: 8px;
   -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
+}
+.room:last-child {
+  margin-bottom: 0px;
 }
 .room__container {
   width: 270px;
@@ -4187,10 +4384,9 @@ input[type=range]::-moz-range-thumb {
   -ms-flex-align: center;
   align-items: center;
   border-radius: 8px;
-  margin-bottom: 30px;
   padding: 34px 0 34px;
   width: 100%;
-  background-color: aliceblue;
+  background-color: var(--color-aliceblue);
 }
 .positioning__info {
   display: -webkit-box;
@@ -4372,7 +4568,7 @@ input[type=range]::-moz-range-thumb {
   position: relative;
 }
 .info-step__title--color {
-  color: #5ac82c;
+  color: var(--color-atlantis);
 }
 .info-step__title--color:after {
   content: "";
@@ -4452,6 +4648,7 @@ input[type=range]::-moz-range-thumb {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
+  position: relative;
 }
 .account__link:not(:last-child) {
   margin-right: 16px;
@@ -4469,6 +4666,21 @@ input[type=range]::-moz-range-thumb {
 }
 .account__icon:hover {
   fill: var(--color-primary);
+}
+.account__count {
+  position: absolute;
+  top: -4px;
+  left: 18px;
+  z-index: 10;
+  margin: 0px 3px;
+  border-radius: 30px;
+  text-align: center;
+  line-height: 30px;
+  min-width: 9px;
+  height: 9px;
+  color: var(--color-light);
+  background-color: #e73c3e;
+  cursor: pointer;
 }
 
 .contact-link {
@@ -4997,5 +5209,113 @@ input[type=range]::-moz-range-thumb {
   border-color: #0b76ef;
   background-color: #0b76ef;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+
+.hotel-card {
+  border-radius: 8px;
+  -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
+}
+.hotel-card__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  border-radius: 0 8px;
+  background-color: var(--color-aliceblue);
+}
+@media (max-width: 768px) {
+  .hotel-card__container {
+    width: 100%;
+  }
+}
+.hotel-card__img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 250px;
+}
+.hotel-card__img img {
+  border-radius: 8px 0 0;
+}
+@media (max-width: 768px) {
+  .hotel-card {
+    display: block;
+  }
+}
+
+.rooms {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.hotel-tour {
+  padding: 30px 0;
+}
+
+.hotel-card__descr {
+  padding: 15px 0;
+  border-radius: 8px;
+  background-color: var(--color-aliceblue);
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 43px;
+  height: 22px;
+}
+.switch__slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  cursor: pointer;
+}
+.switch__slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 2px;
+  bottom: 2px;
+  background-color: var(--color-light);
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+input:checked + .switch__slider {
+  background-color: var(--color-atlantis);
+}
+
+input:focus + .switch__slider {
+  -webkit-box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .switch__slider:before {
+  -webkit-transform: translateX(21px);
+  -ms-transform: translateX(21px);
+  transform: translateX(21px);
+}
+
+/* Rounded sliders */
+.round {
+  border-radius: 34px;
+}
+.round:before {
+  border-radius: 50%;
 }
 /*# sourceMappingURL=main.css.map */
