--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -23,7 +23,7 @@ html {
   min-width: 316px;
   min-height: 100%;
   font-size: 16px;
-  -webkit-tap-highlight-color:  transparent;
+  -webkit-tap-highlight-color: transparent;
 }
 
 img {
@@ -45,16 +45,18 @@ input {
   background-color: transparent;
   cursor: pointer;
 }
-input[type="range"]::-webkit-slider-thumb{
+
+input[type="range"]::-webkit-slider-thumb {
   height: 17px;
   width: 17px;
   border-radius: 50%;
   background: var(--color-blueberry);
   pointer-events: auto;
   -webkit-appearance: none;
-  box-shadow: 0 0 6px rgba(0,0,0,0.05);
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
 }
-input[type="range"]::-moz-range-thumb{
+
+input[type="range"]::-moz-range-thumb {
   height: 17px;
   width: 17px;
   border: none;
@@ -62,7 +64,7 @@ input[type="range"]::-moz-range-thumb{
   background: #17A2B8;
   pointer-events: auto;
   -moz-appearance: none;
-  box-shadow: 0 0 6px rgba(0,0,0,0.05);
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
 }
 
 .site-container {
@@ -369,6 +371,20 @@ input[type="range"]::-moz-range-thumb{
     &:active {
       background-color: var(--color-primary);
     }
+  }
+
+  &--payment {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  &--rooms {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px 20px;
   }
 
   @include mobile {
