--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -14,6 +14,7 @@
   --color-sand: #f5f5f5;
   --color-primary: #ffe733;
   --color-active: #f3db25;
+  --color-atlantis: #5ac82c;
   --color-blueberry: #518bc4;
   --color-sapphire: #0069b5;
   --color-blue: #4e3e8e;
