--- a/src/scss/components/_basket.scss
+++ b/src/scss/components/_basket.scss
@@ -1,4 +1,109 @@
 .booking {
-  padding: 30px 0 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px 0;
+  max-width: 832px;
 }
 
+.buyer-data {
+  display: flex;
+  gap: 15px;
+  padding: 15px 0;
+
+  @include mobile {
+    flex-direction: column;
+    gap: 28px;
+  }
+}
+
+.buyer {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+
+  &__container {
+    padding: 20px 20px 15px;
+    border-radius: 8px;
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
+  }
+
+  &__title {
+    margin: 0;
+    margin-bottom: 14px;
+
+    &--mb {
+      margin: 0;
+      margin-bottom: 5px;
+    }
+  }
+
+  &__check {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 8px;
+    padding-bottom: 12px;
+  }
+
+  &__descr {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  &__info {
+    font-size: 14px;
+    color: var(--color-great);
+  }
+}
+
+// -------------------- Payment -----------------------
+.payment {
+  border-radius: 8px;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.08), 0 4px 16px rgba(0, 0, 0, 0.08);
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+
+    @include mobile {
+      flex-direction: column;
+      gap: 20px;
+    }
+  }
+
+  &__descr {
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+
+    @include mobile {
+      width: 100%;
+    }
+  }
+
+  &__title {
+    margin: 0;
+    margin-bottom: 15px;
+  }
+
+  &__price {
+    display: flex;
+    align-items: end;
+    font-size: 24px;
+    font-weight: 500;
+  }
+
+  &__btn {
+    display: flex;
+    align-items: end;
+    width: 35%;
+
+    @include mobile {
+      width: 100%;
+    }
+  }
+}
