--- a/src/scss/components/_hotel-tour.scss
+++ b/src/scss/components/_hotel-tour.scss
@@ -2,10 +2,27 @@
   padding: 30px 0;
 }
 .hotel-descr {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 40px;
   padding: 15px;
   border-radius: 8px;
   background-color: var(--color-aliceblue);
+
+  &__data {
+    @include mobile {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__title {
+    padding-right: 10px;
+  }
+
+  @include mobile {
+    display: block;
+  }
 }
 .hotel-preview {
   margin-bottom: 60px;
@@ -49,7 +66,6 @@
     height: 250px;
   }
 }
-
 //--------------------- Hotel Gallery Swiper --------------------------
 .mySwiper {
   padding-top: 12px;
@@ -153,5 +169,6 @@
 .swiper-pagination-fraction {
   top: -27px;
   bottom: auto;
+  z-index: -1;
   color: var(--color-light);
 }
